smol fixes (fix unsupported ZWJ emojis and italic text cutoff)

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -292,6 +292,7 @@ button.small-button {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .emoji-option.selected {
